--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ config/local.js
 crawler/htmls
 crawler/qqmusic/qqmusic_albums
 crawler/qqmusic/m4a
+crawler/musopen/htmls
+crawler/musopen/htmls_old
