--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@ crawler/qqmusic/qqmusic_albums
 crawler/qqmusic/m4a
 crawler/musopen/htmls
 crawler/musopen/htmls_old
-.swp
+*.swp
+*.swo
+*.swm
+*.swn
+*.pyc
