--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "body-parser": "^1.13.3",
+    "compression": "^1.6.0",
+    "connect-redis": "^3.0.1",
+    "cookie-parser": "^1.3.5",
+    "debug": "^2.2.0",
+    "express": "^4.13.3",
+    "express-session": "^1.12.1",
+    "iconv-lite": "^0.4.13",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "mongoose": "^4.3.4",
+    "morgan": "^1.6.1",
+    "nodegrass": "0.0.3",
+    "serve-favicon": "^2.3.0",
+    "underscore": "^1.8.3",
+    "when": "^3.7.7"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
