--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-redis": "^3.0.1",
     "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
+    "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "iconv-lite": "^0.4.13",
