--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.13.0",
     "iconv-lite": "^0.4.13",
     "jade": "~1.11.0",
+    "mongodb": "^3.3.0-beta2",
     "mongoose": "^4.4.10",
     "morgan": "^1.6.1",
     "nodegrass": "0.0.3",
