--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^4.4.10",
     "morgan": "^1.6.1",
     "nodegrass": "0.0.3",
+    "request": "^2.88.0",
     "serve-favicon": "^2.3.0",
     "underscore": "^1.8.3",
     "when": "^3.7.7"
