--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "www",
+  "name": "mclassical",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "backend-start": "ts-node ./backend/app.ts"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
@@ -16,7 +16,6 @@
     "express-session": "^1.13.0",
     "iconv-lite": "^0.4.13",
     "jade": "~1.11.0",
-    "mongodb": "^3.3.0-beta2",
     "mongoose": "^4.4.10",
     "morgan": "^1.6.1",
     "nodegrass": "0.0.3",
@@ -26,8 +25,20 @@
     "when": "^3.7.7"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.6",
+    "@types/mongodb": "^3.5.5",
+    "@types/node": "^13.11.0",
+    "@types/request": "^2.48.4",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-uglify": "^0.9.1"
+    "grunt-contrib-uglify": "^0.9.1",
+    "mongodb": "^3.5.5",
+    "mysql": "^2.18.1",
+    "path": "^0.12.7",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.8.2",
+    "typeorm": "^0.2.24",
+    "typescript": "^3.8.3"
   }
 }
