--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.8.6",
     "@types/compression": "^1.7.0",
+    "@types/copy-webpack-plugin": "^5.0.0",
     "@types/express": "^4.17.6",
+    "@types/html-webpack-plugin": "^3.2.2",
     "@types/mongodb": "^3.5.5",
     "@types/node": "^13.11.0",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "@types/request": "^2.48.4",
+    "@types/webpack": "^4.41.11",
     "babel-loader": "^8.0.6",
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-module-resolver": "^3.2.0",
