--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         node-version: 16
     - run: npm install
     - run: npm run build
-    - run: touch dist/.nojekyll
+    - run: touch frontend/dist/.nojekyll
     - name: Deploy to GitHub Pages
       uses: crazy-max/ghaction-github-pages@v3
       with:
